# erie-iron

./: .eslint-flat-config.js  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.messageprocessor  Dockerfile.messageprocessor.base  Dockerfile.webservice  Dockerfile.webservice.base  LICENSE  MANIFEST.in  README.md  USAGE_EXAMPLE.md  codex_init.md  context_engineering.md  create_tag.sh  docker-internal-startup-cmd.sh  gulpfile.cjs  gulpfile.js  iac_future_thinking.md  manage.py  message_processor.sh  opentofu_deployment_steps.md  opentofu_migration.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-common.txt  requirements.txt  sass.config.js  settings.py  setup.py  test_settings.py
.ai_coding/: history.md
.run/: curators production push -stackonly.run.xml  curators production push.run.xml  ei production push (iterate).run.xml  ei production push (stack only).run.xml  ei production push.run.xml  message_processor_daemon.run.xml  one off.run.xml  sda (code_now).run.xml  sda (deploy_now).run.xml  sda (eval now).run.xml  sda (plan_now).run.xml  sda (write initiative test).run.xml  sda.run.xml  webserver.run.xml
aws/: aws-ec2-describe-running-instances.sh  aws-ec2-launch-instance.sh  aws-ecs-run-container-task.sh  aws-ecs-switch-instances.sh  docker-cmd_recreate.sh  docker-message-processor.service  docker-messageprocessor-cmd.sh  docker-webservice-aliases.sh  docker-webservice-cmd.sh  lambda_autoscaling_scaledown_hook.py  lambda_dashboard_refresh_requester.py  lambda_deployment_scaledown.py  nvidia_to_ecr.sh
baremetal_setup/: baremetal-bash-aliases.sh  baremetal-cloudwatch-config.json  baremetal-cloudwatch-sender.sh  baremetal-container-manager.sh  baremetal-crontab.txt  baremetal-scale-command.sh  baremetal-setup-chat.txt  baremetal-smb-installer.sh  baremetal-startup-cmd.sh  baremetal-upload-logs.sh  baremetal-weekly-maintenance.sh
conf/: .env.automatedtests  .env.dev  .env.dev.template  .env.dev_local  .env.prod  .env.prod_asset_processor  .env.production  config.example.json  local_secrets.example.json  secrets.example.json
config/: settings.py
design/: logo.pxd  logo_no_text.pxd
docs/: 20250802_long_arc_plan.md  architecture.md  architecture_and_infrastructure_for_llms.md  business_finder_improvements--implementation_plan.md  business_finder_improvements.md  capability_flow.md  cloud_account_design.md  cognito-google-auth-coding-tasks.md  container-dependency-audit.md  curators-target-account-deployment-guide.md  detailed-architecture-cross-account-aws.md  developer-guide-cross-account-aws.md  devplan.md  erie-iron-agent-orchestration-comparison-2025.md  erie_iron_execution_flow.md  erie_iron_tis_architecture.md  high_level_architecture.md  implementing-cognito-google-auth.md  insights_to_action_agent_design.md  opentofu_deployment_steps.md  personal_investment_analysis_system.md  prompt_evaluation_systems.md  run_erie_iron_locally.md  stack_merge_instructions.md  stack_strategy.md  todo_governance_prompts.md  ui_spec.md
erieiron_autonomous_agent/: admin.py  agent_api.py  application_repo_config.py  apps.py  bootstrap_prompt.md  business_conversation_manager.py  business_manager.py  capability_manager.py  change_application_engine.py  cognito_manager.py  consensus_llm_interface.py  enums.py  models.py  pitch_deck_generator.py  portfolio_leader.py  system_agent.py  system_agent_llm_interface.py  workflow.py  workflow_defaults.py
erieiron_chat_engine/: base_chat_channel.py  chat_engine.py  prompt.py  prompt_parser.py
erieiron_coder/: exec_self_driver.py
erieiron_common/: __init__.py  agent_tools.py  apps.py  aws_log_reader.py  aws_s3_local_cache.py  aws_utils.py  bank_utils.py  base_test_case.py  cache.py  chat_utils.py  client_message_publisher.py  cloudformation_log_reader.py  cloudformation_utils.py  common.py  date_utils.py  decorators.py  django_utils.py  domain_manager.py  enums.py  gcp_utils.py  git_utils.py  gpu_utils.py  json_encoder.py  llm_request_handler.py  local_runtime.py  models.py  opentofu_helpers.py  opentofu_log_utils.py  opentofu_stack_manager.py  opentofu_utils.py  runtime_config.py  secret_utils.py  ses_manager.py  settings_common.py  settings_utils.py  stack_manager.py  test_utils.py  timer.py  view_utils.py
erieiron_config/: settings.py  urls.py  wsgi.py
erieiron_ml/: gpu_utils.py
erieiron_ui/: views.py  (+4 more)
(+827 files in other folders)
