[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erieiron-common"
version = "0.2.17"
description = "Common utilities and infrastructure for Erie Iron applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Erie Iron LLC", email = "tech@erieiron.com"}
]
maintainers = [
    {name = "Erie Iron LLC", email = "tech@erieiron.com"}
]
keywords = ["django", "utilities", "infrastructure", "common", "erieiron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "Django>=5.1.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "psycopg2-binary>=2.8.0",
    "requests>=2.25.0",
    "numpy<2.0.0",
    "anthropic>=0.20.0",
    "openai>=0.27.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
    "nltk>=3.6.0",
    "psutil>=5.8.0",
    "jsonschema>=4.0.0",
    "python-dateutil>=2.8.0",
    "cryptography>=3.4.0",
    "google-cloud-bigquery>=3.0.0",
    "google-analytics-data>=0.16.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
    "cachetools>=4.0.0",
]

# Optional dependencies
[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-django>=4.0.0",
    "black>=22.0.0",
    "django-stubs>=1.9.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

aws = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

ml = [
    "numpy<2.0.0",
    "scikit-learn>=1.0.0",
]

llm = [
    "anthropic>=0.20.0",
    "openai>=0.27.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
]

gcp = [
    "google-cloud-bigquery>=3.0.0",
    "google-analytics-data>=0.16.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
]

# Full installation with all optional dependencies
all = [
    "erieiron-common[dev,aws,ml,llm,gcp]",
]

[project.urls]
Homepage = "https://github.com/erieironllc/erieiron"
Repository = "https://github.com/erieironllc/erieiron.git"
Documentation = "https://docs.erieiron.com/common/"
"Bug Reports" = "https://github.com/erieironllc/erieiron/issues"
Changelog = "https://github.com/erieironllc/erieiron/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["."], include = ["erieiron_common*"]}}
include-package-data = true

[tool.setuptools.package-data]
erieiron_common = [
    "js/*.js",
    "message_queue/*.json",
    "migrations/*.py",
    "chat_engine/chat_channels/llm_chat_context_makers/*.py",
]

# Black code formatting
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# Ruff linting
[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"migrations/*.py" = ["E501", "F401", "F811"]  # Django migrations

# MyPy type checking
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]